Test fix for "+" glyph on button on iOS Safari #2

--- a/styles/fillbar.css
+++ b/styles/fillbar.css
@@ -75,12 +75,15 @@
 
 .play-button-text {
   font-size: 50px;
-  line-height: 1;
   color: transparent;
   text-shadow: 0 2px 0 var(--color-text);
   -webkit-background-clip: text;
   background-clip: text;
   background-color: var(--color-button-text-shadow);
+  line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .play-button-base {
